--- a/public/css/my-style.css
+++ b/public/css/my-style.css
@@ -210,6 +210,7 @@ svg {
 .cont1 h4 {
   color: #00008f;
   font-size: 26px;
+  text-align: center;
 }
 
 .cont1 hr {
@@ -302,5 +303,25 @@ svg {
 .bg-my div {
   background-color: transparent !important;
   padding: 15px !important;
+}
+
+@media screen and (max-width: 992px) {
+  .block-cartes {
+    position: relative !important;
+    top: -190px !important;
+  }
+  .my-head {
+    padding-top: 0 !important;
+    margin-bottom: 475px !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .my-header-titles {
+    left: 25px !important;
+  }
+  .service-27 .owl-nav {
+    left: 112px;
+  }
 }
 /*# sourceMappingURL=my-style.css.map */
