--- a/public/css/my-style.scss
+++ b/public/css/my-style.scss
@@ -276,14 +276,16 @@ svg{
     }
     .my-head{
         padding-top: 0 !important;
-        margin-bottom: 475px !important;
     }
 }
-@media screen and (max-width:768px ) {
+@media screen and (max-width:767px ) {
     .my-header-titles{
         left: 25px !important;
     }
     .service-27 .owl-nav{
         left: 112px;
+    }
+    .my-head{
+        margin-bottom: 475px !important;
     }
 }
